# open-bldc-modelica

./: COPYING  README.md  julia-jupyter-setup.txt
OpenBLDC/: Icons.mo  package.mo  package.order
OpenBLDC/Assemblies/: HallCalibration.mo  HallCalibrationOld.mo  HallSensor_Test.mo  MotorComparison.mo  MotorComparisonFreeRunning.mo  MotorComparisonLDQ.mo  MotorComparisonLDQ2.mo  MotorComparisonLzero.mo  MotorComparisonLzero2.mo  MotorConstSpeedSensorless.mo  SensorBLDC5ph.mo  SensorlessBLDC.mo  SensorlessBLDC2.mo  package.mo  package.order
OpenBLDC/Assemblies/ClosedLoopSystems/: DCMotorPosition.mo  package.mo  package.order
OpenBLDC/Blocks/: CatchStart.mo  CommutationCounter.mo  DetectCommutation.mo  DetectCommutationIntBEMF.mo  DetectCommutationIntBEMFext.mo  DetectCommutationIntBEMFext_old.mo  DetectCommutationPartial.mo  DetectCommutationSimple.mo  DetectCommutationZeroCrossing.mo  DetectCommutationZeroCrossingSimple.mo  Extractor.mo  HalfBridgeCtrl.mo  HalfBridgeDriver.mo  HalfBridgeLogic.mo  HalfBridgeLogicBLDC.mo  HalfBridgeLogicBLDCContinuous.mo  HalfBridgeLogicINSD.mo  HallDecode.mo  HallDecode5ph.mo  HallDecodeNew.mo  PhaseDiffVoltage.mo  PhaseDiffVoltageNph.mo  PulseControlSelector.mo  PulseLogic.mo  PulseLogicNph.mo  PulseWidth.mo  PulseWidthVar.mo  SensorCtrl3phContinuous.mo  SensorCtrl3phStateGraphNG.mo  SensorCtrl5phStateGraphNG.mo  SensorlessCtrl3phPWM.mo  SensorlessCtrl3phStateGraph.mo  SensorlessCtrl3phStateGraphNG.mo  StartMotor.mo  TestCtrl.mo  TestCtrl3ph.mo  TestCtrl3phPWM.mo  TestCtrl3phPWMold.mo  Triangular.mo  package.mo  (+1 more)
OpenBLDC/Blocks/ClosedLoop/: ProportionalClocked.mo  ProportionalContinous.mo  ProportionalDiscrete.mo  ProportionalDiscreteTcpIP.mo  ProportionalPartial.mo  package.mo  package.order
OpenBLDC/Converters/: Examples.mo  package.mo  package.order
OpenBLDC/Converters/Continous/: Inverter.mo  Inverter3ph.mo  InverterNph.mo  PowerConverterCS.mo  PowerConverterVSk.mo  PowerConverterVSv.mo  SwitchFreeRunning.mo  package.mo  package.order
OpenBLDC/Converters/Partial/: Inverter.mo  InverterNph.mo  package.mo  package.order
OpenBLDC/Converters/SwitchingIdeal/: Inverter.mo  Inverter3ph.mo  InverterNph.mo  package.mo  package.order
OpenBLDC/Data/: Robbe_ROXXY2824.mo  package.mo  package.order
OpenBLDC/Icons/: BusIn.mo  BusOut.mo  ControlLaw.mo  Converter.mo  RecordPackage.mo  Sensor.mo  package.mo  package.order
OpenBLDC/Interfaces/: LoadPins.mo  LoadPort.mo  PartialInverter.mo  PwmControlBusConnectorIn.mo  PwmControlBusConnectorOut.mo  Source.mo  SupplyPins.mo  SupplyPort.mo  package.mo  package.order
OpenBLDC/Interfaces/AdcBusses/: AdcSingleIntegerBusConnectorIn.mo  AdcSingleIntegerBusConnectorOut.mo  package.mo  package.order
OpenBLDC/Interfaces/Electrical/: LoadPort.mo  Source.mo  SupplyPort.mo  package.order
OpenBLDC/MCUs/: STM32F4pwmadcdma.mo  package.mo  package.order
OpenBLDC/Machines/: BrushedDC.mo  PMSM.mo  PMSMdq_3ph.mo  PMSMm.mo  PMSMm2.mo  PMSMndq.mo  SM_PermanentMagnet_WRP.mo  package.mo  package.order
OpenBLDC/Resources/: CMakeLists.txt
OpenBLDC/Resources/test/: CMakeLists.txt
OpenBLDC/Resources/test/ChibiESC/: CMakeLists.txt  bal.c  bal.h  bal_interface.c  bal_interface.h  bal_term.c  bal_term.h  board.h  ch.h  chconf.h  chschd.h  chutil.h  main.c  mcuconf.h  misc.c  misc.h  pwmadcdma.c  pwmadcdma.h  ringbuf.h  siminterfaces.c  siminterfaces.h
OpenBLDC/Resources/test/ChibiESC/comps/: genpp3.comp  probe.comp  pwm1dma.comp  pwm3dma.comp  sim.comp  simbla.comp  simfast.comp  sixstep.comp  svm3.comp  term.comp
OpenBLDC/Resources/test/Communication/: CMakeLists.txt  TCPIPClientAsClosedLoopPositionController.c
OpenBLDC/Sensors/: HallDigital1.mo  HallDigital123.mo  HallDigitalN.mo  package.mo  package.order
OpenBLDC/Sensors/ADCs/: AdcSingleBufferedInteger.mo  CircularBufferInteger.mo  package.mo  package.order
OpenBLDC/Sensors/Examples/: AdcMultiplexlInteger.mo  AdcSingleChannelInteger.mo  package.mo  package.order
OpenBLDC/Tests/: AperiodicSampler.mo  BaseSampler.mo  Commutation.mo  ConstantSpeed_Hall.mo  SensorMotorStart.mo  SensorlessMotorStart.mo  TestPWM.mo  package.mo  package.order
OpenBLDC/Tests/ClosedLoop/: DCMotorPositionClocked.mo  DCMotorPositionDiscrete.mo  DCMotorPositionTcpIP.mo  (+2 more)
notebooks/: ClosedLoopDCMotorPosition.ipynb  test_OMJulia.ipynb
python/: test.py
python/Tests/: TestPWM.py  plotTestPWM.py
(+15 files in other folders)
